--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 body {
   font-family: Arial, sans-serif;
-  background: #4c5874;
+  background: #444d61;
   padding: 60px 20px 20px 20px;
 }
 
@@ -38,6 +38,12 @@ body {
   font-weight: bold;
 }
 
+.link-dois {
+    color: #022df0da; /* cor do link */
+    text-decoration: none; /* remove sublinhado */
+    font-weight: bold;
+}
+
 .link:hover {
   text-decoration: underline; /* sublinha ao passar mouse */
   font-weight: bold;
@@ -48,7 +54,7 @@ body {
 .Calculadora {
   max-width: 320px;
   margin: 0 auto;
-  background: #2c3e50;
+  background: #22303d;
   border-radius: 15px;
   padding: 20px;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
