Correção media queries

--- a/style.css
+++ b/style.css
@@ -219,7 +219,8 @@ body {
 /* Para celulares */
 @media (max-width: 480px) {
   body {
-    padding: 40px 20px 20px 20px;
+    padding: 35px 20px 20px 20px;
+    overflow: hidden;
   }
 
   .Calculadora {
@@ -232,6 +233,6 @@ body {
 }
 
   .Rodape {
-    padding: 30px 40px 20px 40px;
+    padding: 15px 40px 20px 40px;
   }
 }
